<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2010 Google Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<!--     <include layout="@layout/colorstrip"/>  -->

    <LinearLayout style="@style/TitleBar" >

        <View
            style="@style/TitleBarSpring"
            android:layout_weight="0.01" />

        <!--
            <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:id="@+id/btn_title_refresh"
            android:contentDescription="@string/description_refresh"
            android:src="@drawable/ic_title_refresh"
            android:onClick="onRefreshClick" />

	    	
        <ProgressBar style="@style/TitleBarProgressIndicator"
            android:id="@+id/title_refresh_progress"
            android:visibility="gone" />
        -->

        <ImageView style="@style/TitleBarSeparator" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.03"
            android:background="#585858"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:onClick="onSearchClick"
            android:src="@drawable/ic_title_search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="6dip" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button android:id="@+id/home_btn_schedule"
                style="@style/HomeButton"
                android:onClick="onScheduleClick"
                android:text="@string/btn_schedule"
                android:drawableTop="@drawable/add_story"/>
            <Button android:id="@+id/home_btn_map"
                style="@style/HomeButton"
                android:onClick="onMapClick"
                android:text="@string/btn_map"
                android:drawableTop="@drawable/map_icon"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button android:id="@+id/home_btn_sessions"
                style="@style/HomeButton"
                android:onClick="onVenueClick"
                android:text="@string/btn_sessions"
                android:drawableTop="@drawable/authors"/>
            <Button android:id="@+id/home_btn_starred"
                style="@style/HomeButton"
                android:onClick="onStarredClick"
                android:text="@string/btn_starred"
                android:drawableTop="@drawable/user_icon4"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        <Button android:id="@+id/home_btn_vendors"
            style="@style/HomeButton"
            android:onClick="onFeedsClick"
            android:text="@string/btn_vendors"
            android:drawableTop="@drawable/share_icon3"/> 
		               
                <!-- TODO: refactor home_btn_sandbox drawable name -->
         <Button android:id="@+id/home_btn_notes"
            style="@style/HomeButton"
            android:onClick="onAboutClick"
            android:text="@string/btn_notes"
            android:drawableTop="@drawable/information"/>
            <!-- TODO: refactor home_btn_office_hours drawable name -->
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/now_playing_loading"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/now_playing_height"
        android:orientation="horizontal"
        android:background="#333333"
        android:gravity="center">
<!--         <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="6dip"
            android:indeterminate="true"/>
 -->            
        <TextView
        	android:id="@+id/textone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"            
            android:textSize="@dimen/text_size_small"
            android:text="@string/now_playing_loading"
            android:textColor="#ffffff"
            style="@style/TextHeader"/>
 		<TextView
 			android:id="@+id/texttwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/textone"
            android:textSize="@dimen/text_size_small"
            android:text="@string/now_playing_no_results"
            android:textColor="#ffffff"
            style="@style/TextHeader"/>
		<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/texttwo"
            android:textSize="@dimen/text_size_small"
            android:text="@string/now_playing_enable_wifi"
            android:textColor="#ffffff"
            style="@style/TextHeader"/>                            
            
    </RelativeLayout>
</LinearLayout>
